--- a/.github/workflows/image_push_oci.yml
+++ b/.github/workflows/image_push_oci.yml
@@ -1,16 +1,16 @@
 name: Push Docker image to OCI Container Registry
 
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - 'v*'
+  # push:
+  #   branches:
+  #     - main
+  #   tags:
+  #     - 'v*'
   workflow_dispatch:
   
 jobs:
   build-and-push:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - name: Check out the repo
       uses: actions/checkout@v2
